--- a/HW02/02_network_models.ipynb
+++ b/HW02/02_network_models.ipynb
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 217,
    "metadata": {
     "collapsed": true
    },
@@ -727,14 +727,16 @@
     "def print_properties(G):\n",
     "    print('Network has {} nodes.'.format(len(G.nodes())))\n",
     "    print('Network has {} edges.'.format(G.size()))\n",
-    "    giant_G = max(nx.connected_component_subgraphs(G), key=len)\n",
+    "    connected_components = list(nx.connected_component_subgraphs(G))\n",
+    "    print('Network has {} connected components'.format(len(connected_components)))\n",
+    "    giant_G = max(connected_components, key=len)\n",
     "    print('Network has GC of size = {}'.format(len(giant_G.nodes())))\n",
     "    print('Network has clustering coefficient = {}'.format(nx.average_clustering(G)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -743,6 +745,7 @@
      "text": [
       "Network has 5242 nodes.\n",
       "Network has 14496 edges.\n",
+      "Network has 355 connected components\n",
       "Network has GC of size = 4158\n",
       "Network has clustering coefficient = 0.529635811052136\n"
      ]
@@ -754,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -763,6 +766,7 @@
      "text": [
       "Network has 5242 nodes.\n",
       "Network has 14445 edges.\n",
+      "Network has 30 connected components\n",
       "Network has GC of size = 5176\n",
       "Network has clustering coefficient = 0.00547304580842176\n"
      ]
@@ -771,15 +775,6 @@
    "source": [
     "print_properties(gc)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
