--- a/HW02/02_network_models.ipynb
+++ b/HW02/02_network_models.ipynb
@@ -793,7 +793,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -821,7 +823,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EXPLANATIONS HERE"
+    "Both graphs are different but not totally, they both have a rather big giant cluster but the one of G is smaller. In other words, the preferential attachment to the second graph is way higher.\n",
+    "\n",
+    "The G graph contains many more subclusters of reasonable size. (we cannot very easily see it but in part 2.5 it has been computed, see #connected components)\n",
+    "\n",
+    "In general we should understand that having the exact same degree distribution between two graphs doesn't make the two graphs the same."
    ]
   },
   {
@@ -843,7 +849,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "YES/NO, BECAUSE...."
+    "Number of nodes and edges are the same by construction. But this doesn't not imply that other properties will follow as we have seen in part 1.\n",
+    "\n",
+    "(please note that : there are less edges but by taking into account their weight we would have the same number)\n",
+    " \n",
+    "From the graph, we have seen that the preferential attachment is higher in $gc$, hence we will have a bigger GC.\n",
+    "\n",
+    "About the clustering coefficient, we know that in real world graphs (such as social networks), the clustering is rather high (just like for $G$). But we construct $gc$ with randomness in mind and random networks tend to have a rather low clustering coefficient. So we can guess that clustering coefficient will be smaller in $gc$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's verify our assumptions and show some properties for each graph."
    ]
   },
   {
