--- a/HW02/02_network_models.ipynb
+++ b/HW02/02_network_models.ipynb
@@ -165,7 +165,10 @@
    "metadata": {},
    "source": [
     "### With Barabási-Albert graph \n",
-    "<h1 style=\"color:red\">ADD EXPLANTIONS HERE</h1>"
+    "\n",
+    "It's quite straightforward to compute the unknown parameter m which is the number of new links added.\n",
+    "\n",
+    "Note: we need an integer, so we round our estimation."
    ]
   },
   {
@@ -473,7 +476,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ws = nx.watts_strogatz_graph(N, k, 4e-02)"
@@ -635,7 +640,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "degree_distribution=sorted(nx.degree(G).values(), reverse=True) # degree distribution sorted from highest to lowest\n",
@@ -653,7 +660,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "degree_sequence_gc=sorted(nx.degree(gc, weight = 'weight').values(),reverse=True) #weighted degree distribution\n",
