--- a/HW03/03_spectral_graph_theory.ipynb
+++ b/HW03/03_spectral_graph_theory.ipynb
@@ -2216,7 +2216,8 @@
     "Why don't we use the first eigenvector? \n",
     "\n",
     "**\n",
-    "Because the second smallest eigenvalue of L is the algebraic connectivity (or Fiedler value) of G and its associated eigenvector approximates the sparsest cut of a graph.\n",
+    "The first eigenvector should be constant (same values everywhere) before normlization, and hence doesn't help us to find a good cut.\n",
+    "But the second smallest eigenvalue of L is the algebraic connectivity (or Fiedler value) of G and its associated eigenvector approximates the sparsest cut of a graph.\n",
     "**"
    ]
   },
